# cviz

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml  release_major.yml  release_minor.yml  release_patch.yml  rust.yml
demo/wat/: 01-simple-chain.wat  02-three-layer-stack.wat  03-multi-chain.wat  04-chain-plus-utility.wat  05-non-http-chain.wat  06-typed-chain.wat
examples/: demo.rs
src/: ascii.rs  json.rs  lib.rs  main.rs  mermaid.rs  model.rs  output.rs  parser.rs
src/lib/: lib.rs  model.rs  snapshot_tests.rs  test_utils.rs
src/lib/output/: ascii.rs  json.rs  json.rs.bk  mermaid.rs  mod.rs
src/lib/parse/: component.rs  json.rs  json.rs.bk  mod.rs
src/lib/snapshots/: cviz__snapshot_tests__tests__chain_plus_utility_ascii_all_interfaces.snap  cviz__snapshot_tests__tests__chain_plus_utility_ascii_full.snap  cviz__snapshot_tests__tests__chain_plus_utility_ascii_handler_chain.snap  cviz__snapshot_tests__tests__chain_plus_utility_mermaid_all_interfaces.snap  cviz__snapshot_tests__tests__chain_plus_utility_mermaid_full.snap  cviz__snapshot_tests__tests__chain_plus_utility_mermaid_handler_chain.snap  cviz__snapshot_tests__tests__long_chain_ascii_all_interfaces.snap  cviz__snapshot_tests__tests__long_chain_ascii_full.snap  cviz__snapshot_tests__tests__long_chain_ascii_handler_chain.snap  cviz__snapshot_tests__tests__long_chain_mermaid_all_interfaces.snap  cviz__snapshot_tests__tests__long_chain_mermaid_full.snap  cviz__snapshot_tests__tests__long_chain_mermaid_handler_chain.snap  cviz__snapshot_tests__tests__simple_chain_ascii_all_interfaces.snap  cviz__snapshot_tests__tests__simple_chain_ascii_full.snap  cviz__snapshot_tests__tests__simple_chain_ascii_handler_chain.snap  cviz__snapshot_tests__tests__simple_chain_mermaid_all_interfaces.snap  cviz__snapshot_tests__tests__simple_chain_mermaid_full.snap  cviz__snapshot_tests__tests__simple_chain_mermaid_handler_chain.snap  (+30 more)
src/output/: ascii.rs  json.rs  mermaid.rs
src/parse/: component.rs
