[package]
name = "cviz"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["Bailey Hayes", "Elizabeth Gilbert"]
description = "A CLI tool to visualize WebAssembly component composition structure."
readme = "README.md"
repository = "https://github.com/cosmonic-labs/cviz"
categories = ["wasm"]
keywords = ["wasm", "WebAssembly", "visualization"]

[lib]
name = "cviz"
path = "src/lib/lib.rs"

[[bin]]
name = "cviz-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
wasmparser = { version = "0.244", features = ["component-model"] }
anyhow = "1.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
wat = "1"
